# pia-service

./: .gitignore  README.md  pyproject.toml
pia_service/: auth.py  cli.py  connect.py  enable.py  get_token.py  port_forward.py  server_info.py  status.py  transport.py
pia_service/templates/: pia-pf-renew.service.jinja  pia-pf-renew.timer  pia-tailscale.conf.jinja  pia-vpn.service.jinja  pia.conf.jinja
