[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pia-service"
version = "0.0.0"
authors = [
    {name = "Ross Jennings", email = "rossjjennings@gmail.com"},
]
requires-python = ">=3.6"
dependencies = [
    "requests",
    "toml",
]

[project.scripts]
pia-service = "pia_service.cli:main"
