[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pia-service"
version = "0.1.0"
authors = [
    {name = "Ross Jennings", email = "rossjjennings@gmail.com"},
]
requires-python = ">=3.6"
dependencies = [
    "requests",
    "toml",
    "jinja2",
]

[project.scripts]
pia-service = "pia_service.cli:main"

[tool.setuptools.package-data]
pia_service = ["ca.rsa.4096.crt"]
"pia_service.templates" = ["*"]
